<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/post_layout_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/commenter_profile_pic"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:background="@drawable/post_profile_bg"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:id="@+id/comment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/comment_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_full_name"
                android:layout_marginTop="2dp"
                android:layout_marginStart="0dp"/>


            <TextView
                android:id="@+id/comment_content"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:text="@string/caption"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>
