<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_activity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@color/white"
            android:elevation="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/img_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_full_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:paddingStart="90dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:paddingStart="11dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingEnd="3dp"
            android:background="#F6F4F4">
            <TextView
                android:id="@+id/All_Posts"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/all"
                android:paddingStart="50dp"
                android:background="@color/white"
                android:paddingTop="4dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/Media_Posts"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/media"
                android:paddingStart="40dp"
                android:paddingTop="4dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/Text_Posts"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/text"
                android:paddingStart="44dp"
                android:paddingTop="4dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homerecview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="0dp"/>
    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/white"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_navigation"
        android:layout_gravity="bottom"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
