<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/post_layout_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userpropic"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:background="@drawable/post_profile_bg"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/handle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_full_name"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="3dp"/>
            </LinearLayout>


            <TextView
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:text="@string/caption"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

            <ImageView
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/img_1"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                tools:ignore="RtlSymmetry"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/heart"
                    android:layout_marginTop="6dp"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/heart2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/likeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10k"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/go_to_comments"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/img_6"
                    tools:ignore="ContentDescription"
                    />

                <TextView
                    android:id="@+id/commentsCount"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_10k"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>

<!-- <ImageView
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="2dp"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="ContentDescription" />
                -->
    <!--<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userpropic"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    app:srcCompat="@drawable/ic_baseline_person_24" />

                <TextView
                    android:id="@+id/handle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="19dp"
                    android:layout_toEndOf="@+id/userpropic"
                    android:hint="handle"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/post"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/handle"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="94dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="118dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="1dp"
                    android:hint="Caption"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
     -->